tests/cases/modules/errors/module-glob-duplicate.ari
mod A {
  pub fn value() -> i64 {
    return 1;
  }
}

mod B {
  pub fn value() -> i64 {
    return 2;
  }
}

use A::*
use B::*

fn main() -> i64 {
  return value();
}
